style project according to flake8

--- a/customer/templates/customer/base.html
+++ b/customer/templates/customer/base.html
@@ -131,7 +131,7 @@
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'main' %}">Главная</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'customers:all_customers' %}">Заказчики</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Исполнители</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'performers:all_performers' %}">Исполнители</a>
       </nav>
     </div>
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
